# Chess

./: .gitignore  .gitmodules  CMakeLists.txt  ChessConfig.h.in  README.md  runchess.sh  testchess.sh
doc/: Chess.md
src/: main.cpp  util.hpp
tests/: util_tests.cpp
